# GMKtec_paperclipai_local

./: .env  .gitignore  Dockerfile.llama-rocm  Dockerfile.vllm  Dockerfile.vllm-rocm  README.md  docker-compose.yml  download_model.sh  fix-agent-workspaces.sh  install_docker.sh  install_paperclipai_service.sh  paperclipai.service  ql -h 127.0.0.1 -p 54329 -U paperclip -d paperclip -t -A -c SELECT table_name, column_name FROM information_schema.columns WHERE table_name = 'agents' ORDER BY ordinal_position;  run_paperclipai_service.sh  setup_evo_x2_hardware.sh  verify_local_llm_stack.sh
architecture/: rust-advanced-curriculum-architecture.md
comfyui/: .gitignore
doc/: llama-server-tuning.md  opencode-guide.md  opencode-local-llm-setup.md  paperclip-agent-audit-2026-04-12.md  token-context-flow.md  troubleshooting.md  vllm-guide.md
docs/: paperclip_agent_memory_runtime_guide.md  paperclip_shared_memory_handover_2026-04-24.md  paperclip_shared_memory_migration_plan.md  rust-advanced-curriculum-management.md
dxAxClass/: OT_Materials_Package.md  build_slide_inventory.py  build_slide_review_bundle.py  slide_inventory.json  slide_inventory_report.md  slide_review_bundle.json  slide_review_bundle.md  교육계획안_평가보고서.md  슬라이드_및_교안_QA_점검보고서.md  일일 교육계획안.md
opencode-config/: opencode.jsonc
ros2/: README.md  comparison.md
rust/: README.md
rust/code/day15_axum_rest/: Cargo.toml  README.md
rust/code/day15_axum_rest/src/: main.rs
rust/code/day16_sqlx_sqlite/: Cargo.toml  README.md
rust/code/day16_sqlx_sqlite/src/: main.rs
scripts/: heartbeat_stale_run_watchdog.sh
(+366 files in other folders)
