[package]
name = "day16_sqlx_sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
